<resources>
    <!-- App name -->
    <string name="app_name">Keyboard</string>
    <!-- IME label -->
    <string name="simple_ime">Katsuna IME</string>

    <!-- Settings title -->
    <string name="settings_name">Keyboard Settings</string>

    <!-- Labels for input language selection -->
    <string name="language_selection_title">Input languages</string>
    <string name="select_language">Select input languages</string>

    <!-- support languages -->
    <string name="label_subtype_ar">Arabic</string>
    <string name="label_subtype_en">English</string>
    <string name="label_subtype_fr">French</string>
    <string name="label_subtype_de">German</string>
    <string name="label_subtype_el">Greek</string>
    <string name="label_subtype_it">Italian</string>
    <string name="label_subtype_pt">Portuguese</string>
    <string name="label_subtype_ru">Russian</string>
    <string name="label_subtype_es">Spanish</string>
    <string name="label_subtype_tr">Turkish</string>

    <!-- Content description  for close popup keyboard button -->
    <string name="close_popup_keyboard">Close popup keyboard</string>

    <!-- switch keyboards symbols -->
    <string name="switch_1" translatable="false">"@*?"</string>
    <string name="switch_2" translatable="false">"+=€"</string>
    <string name="switch_3" translatable="false">"+=$"</string>

    <!-- Label for space key -->
    <string name="space">space</string>

    <!-- Label for key that switches to numeric keyboard -->
    <string name="numbers" translatable="false">"?123"</string>

    <!-- key for storing setting -->
    <string name="preference_grid_key" translatable="false">preference_grid_key</string>
    <!-- Grid setting labels -->
    <string name="preference_grid_title">Grid background</string>
    <string name="preference_grid_summary">Show grid background</string>

    <!-- KeyboardView - accessibility support -->
    <!-- Description of the Alt button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardview_keycode_alt">Alt</string>
    <!-- Description of the Cancel button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardview_keycode_cancel">Cancel</string>
    <!-- Description of the Delete button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardview_keycode_delete">Delete</string>
    <!-- Description of the Done button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardview_keycode_done">Done</string>
    <!-- Description of the Mode change button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardview_keycode_mode_change">Mode change</string>
    <!-- Description of the Shift button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardview_keycode_shift">Shift</string>
    <!-- Description of the Enter button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardview_keycode_enter">Enter</string>
    <!-- Announce that a headset is required to hear keyboard keys while typing a password. [CHAR LIMIT=NONE] -->
    <string name="keyboard_headset_required_to_hear_password">Plug in a headset to hear password keys spoken.</string>
    <!-- The value of a keyboard key announced when accessibility is enabled and no headsed is used. [CHAR LIMIT=NONE] -->
    <string name="keyboard_password_character_no_headset">Dot.</string>

    <!-- Keyboard setup strings -->
    <string name="katsuna_keyboard_setup">Katsuna Keyboard setup</string>
    <string name="step_1">1st Step</string>
    <string name="enable_keyboard_button">Enable Keyboard</string>
    <string name="enable_keyboard_label">Enable Katsuna keyboard</string>
    <string name="enable_keyboard_desc">By enabling Katsuna keyboard you can add it to your list of keyboards and use it.</string>

    <string name="step_2">2nd Step</string>
    <string name="set_keyboard_button">Set Keyboard</string>
    <string name="set_keyboard_label">Set Katsuna keyboard</string>
    <string name="set_keyboard_desc">Select and set Katsuna keyboard as your input method. Conveniently type messages and add information.</string>
    <!-- Eof keyboard setup strings -->

</resources>
